--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -11,7 +11,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
+library(tidyverse, knitr)
 ```
 
 # Course Overview
