--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -42,7 +42,8 @@ Deadline: October 10, 11:59pm
 
 Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
 
-Key: [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
+Key: 
+<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
 
 ## 3.2. Assignment 2 
 
@@ -64,7 +65,8 @@ Deadline: October 19, 11:59pm
 
 Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
-Key: [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
+Key: 
+<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
 
 ## 3.3. Assignment 3 
 
@@ -82,7 +84,8 @@ Deadline: November 9, 9:00am
 
 Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
-Key: [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R)
+Key: 
+<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
 
 ## 3.4. Assignment 4 
 
@@ -92,7 +95,8 @@ Deadline: November 29, 11:59pm
 
 Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) 
 
-Key: [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R)
+Key: 
+<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
 
 
 ## 3.5. Final
@@ -104,7 +108,8 @@ Deadline: December 7, 11:59pm
 Download: 
 [html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) 
 
-Key: [doc file]; [R script]
+Key:
+
 
 
 
