--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -25,7 +25,7 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics)
+- [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Light, Singer & Willet, 1990, pp. 1-40](./assignments/Light Singer Willet 1990.pdf)
 
 Lectures:
 
@@ -46,7 +46,7 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred)
+- [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred); alternate source for [Evans](./assignments/evans_2020.pdf)
 
 Lectures: 
 
@@ -75,7 +75,7 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapters 11 and 12](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Levy 2019](http://gppreview.com/2019/12/16/eugenics-ethics-statistical-analysis/)
+- [LSWR Chapters 11 and 12](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics)
 
 Lectures:
 
@@ -111,7 +111,7 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapters 5 and 10](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Hu 2021](https://bostonreview.net/science-nature-race/lily-hu-race-policing-and-limits-social-science)
+- [LSWR Chapters 5 and 10](https://learningstatisticswithr.com/lsr-0.6.pdf)
 
 
 Lecture slides: 
