--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -19,23 +19,22 @@ library(tidyverse)
 This course provides a first introduction to quantitative data analysis in education and the social sciences. It is part of a three course sequence intended to provide a toolkit of statistical concepts, methods and their implementation to producers of applied research in education and other social sciences. This course is intended for those who will pursue additional statistics courses with the aim of ultimately conducting their own, independent research. The course is organized around the principle that research design depends in part on researchers' substantive questions and their quantitative data available to answer these question. In this introductory course, we will focus on describing categorical and continuous data and quantifying the relationship between categorical and continuous data. Students will form a solid foundation for frequentist, inferential statistics (and some of critiques of this model). The course seeks to blend a conceptual, mathematical and applied understanding of basic statistical concepts. At the core of our pedagogical approach is the belief that students learn statistical analysis by **doing** statistical analysis. *This course (or substitute) is a pre-requisite for EDUC 643*.
 
 # Meeting Time and Location
-*Class:* Tuesdays and Thursdays, 4:00pm - 5:20pm, 146 HEDCO
-*Lab:* Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays, 5:30pm - 6:20pm 146 HEDCO 
+*Class:* Tuesdays and Thursdays, 4:00pm - 5:20pm, 
+*Lab:* 
 
 # Instructors
 David Liebowitz
-Claire Zhang
-Havisha Khurana
+
 
 # Student Learning Outcomes
 By the end of this term, it is expected that students will be able to:
 
-1. Articulate the principles of responsible and ethical quantitative research
+1. Articulate the principles of responsible and ethical quantitative research in educatino and human services
 2. Describe, summarize and visualize quantitative data that are categorical and continuous
 3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
 4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
 5. Describe strategies to improve the replicability and generalizability of quantitative research
-6. Use the R programming language to conduct all such analyses
+6. Use on open-source, object-oriented statistical programming language (in this case R) to conduct all such analyses
 
 
 # Textbooks and Reading Materials
@@ -63,7 +62,7 @@ Students must have the latest version of R, which can be downloaded [here](https
 
 ### Resources for R and RStudio
 
-While we will teach you how to effectively use R and RStudio to conduct analyses, one of the key skills required to use R is the ability to find answers on your own. Many common questions or problems are either available on blogs or have been asked and answered in discussion forums already. Finding and deciphering those answers is an important skill you should seek to hone. *You will never remember all of the programming commands!*
+While we will teach you how to effectively use R and RStudio to conduct analyses, one of the key skills required to use R is the ability to find answers on your own. Many common questions or problems are available on blogs, have been asked and answered in discussion forums already, or can be problem-solved using the assistance of artificial intelligence chat bots (more below). Finding and deciphering those answers is an important skill you should seek to hone. *You will never remember all of the programming commands!*
 
 Here are some sites where you can find the answers to many R questions and learn new tricks:
 
@@ -76,6 +75,9 @@ Here are some sites where you can find the answers to many R questions and learn
  - [StackOverflow](https://stackoverflow.com/questions/tagged/r)
  - [Stack Exchange](https://stats.stackexchange.com)
 
+### Using Artifical Intelligence (AI) Tools
+
+Artificial Intelligence (AI) chatbots and the Large Language Models (LLMs) on which they rely have dramatically increased the speed and efficiency of many programmers. Members of the teaching regularly use such tools in their analytic and drafting tasks. That said, they are not (as least currently) substitutes for skilled analysts and writers. Beyond AI chatbots known proclivity for "hallucinating" facts, their solutions to programming tasks often require adaptation and revision by a knowledgeable human. Further, because their ability to generate text relies on using billions of phrase chunks in the public domain to predict the next word, their language on technical topics can be imprecise when many other writers on these topics are also imprecise. Thus, while we encourage you to investigate how AI chatbots can help improve your programming and statistical analysis skills, we caution you to skeptically review all code and language produced to ensure its alignment to the course expectations. To be explicit: you may use AI chatbots for assistance with your assignments. If you use one to generate your responses, you must indicate so on your assignment. You do not need to do so if you have used these tools only to help with coding tasks and/or light editing of your written responses. You are likely already familiar with OpenAI's [ChatGPT](chat.openai.com). As you gain more experience as a programmer, you may want to use an AI tool that is designed specifically to help with coding such as [GitHub Copilot](github.com/features/copilot) or [AskCodi](https://www.askcodi.com/).
 
 # Schedule
 
@@ -96,10 +98,10 @@ Final grades will be based on the following components:
 - Final: 30%
 
 ## Quizzes
-Five classes will begin with a very short multiple-choice quiz that is designed to test your knowledge of the theoretical principles underlying the statistics we are studying for the week. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). Quizzes will be open book, notes and computer.
+There will be five (5) very short quizzes that are designed to test your knowledge of the theoretical principles underlying the statistics we are studying for the week. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). Quizzes will be open book, notes and computer, and may (at your discretion) be completed in consultation with other students in the class. We will leave 15 minutes of class time available to complete each quiz, and any student who would benefit from additional time has until 5pm the following day to submit the quiz on Canvas. It is each student's responsibility to submit the quiz, and the teaching team will not be able to send individualized reminders to do so.
 
 ## Assignments
-The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. Further assignment details are available [here](./assignments.html)
+The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) or two partner(s). No groups of more than three, please. Please make sure that you engage in a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. Further assignment details are available [here](./assignments.html)
 
 ## Final
 The final assignment involves a more extended application and synthesis of the concepts of descriptive and relational applied data analysis covered in this course.
