--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -29,11 +29,8 @@ Objectives:
 
 Readings: 
 
-<<<<<<< HEAD
 - [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Light, Singer & Willet, 1990, pp. 1-40](./assignments/Light Singer Willet 1990.pdf)
-=======
-- Complete **prior to Sept. 29** class: [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/how-eugenics-shaped-statistics-238014/)
->>>>>>> e0db08480a45fd8031d1aa71ae1a60584fe5d9ef
+
 
 Lectures:
 
@@ -55,11 +52,7 @@ Objectives:
 
 Readings: 
 
-<<<<<<< HEAD
 - [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred); alternate source for [Evans](./assignments/evans_2020.pdf)
-=======
-- Complete **prior to Oct. 6** class: [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred); alternate source for [Evans](./assignments/evans_2020.pdf)
->>>>>>> e0db08480a45fd8031d1aa71ae1a60584fe5d9ef
 
 Lectures: 
 
@@ -89,12 +82,8 @@ Objectives:
 
 Readings: 
 
-<<<<<<< HEAD
 - [LSWR Chapters 11 and 12](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics)
-=======
-- Complete **prior to Oct. 13** class: [LSWR Chapters 11 and 12](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Levy 2019](http://gppreview.com/2019/12/16/eugenics-ethics-statistical-analysis/) 
-   + See lecture notes on what to focus on (and not) in LSWR
->>>>>>> e0db08480a45fd8031d1aa71ae1a60584fe5d9ef
+db08480a45fd8031d1aa71ae1a60584fe5d9ef
 
 Lectures:
 
@@ -132,12 +121,7 @@ Objectives:
 
 Readings: 
 
-<<<<<<< HEAD
 - [LSWR Chapters 5 and 10](https://learningstatisticswithr.com/lsr-0.6.pdf)
-=======
-- Complete **prior to Oct. 27** class: [LSWR Chapter 5](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Hu 2021](https://bostonreview.net/science-nature-race/lily-hu-race-policing-and-limits-social-science)
-- Complete **prior to Nov. 10** class: [LSWR Chapter 10](https://learningstatisticswithr.com/lsr-0.6.pdf)
->>>>>>> e0db08480a45fd8031d1aa71ae1a60584fe5d9ef
 
 
 Lecture slides: 
@@ -173,14 +157,14 @@ Objectives:
 
 Readings: 
 
-- Complete **prior to Nov. 22** class: [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
+- [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
 
 Lecture slides: 
 
 - Class 13 (11/8) slides: [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf)
 - Class 14 (11/10) slides: [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
 - Class 15-16 slides (11/15 & 11/22): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf)
-  + **No class on 11/17 (David traveling for conference) and 11/24 (university holiday)**
+
 
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
 - R code: [R script](./slides/EDUC641_14_code.R)
