--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -40,7 +40,7 @@ Objectives of this assignment
 
 Deadline: October 10, 11:59pm
 
-Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
+Download: <!-- [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv) -->
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
@@ -63,7 +63,7 @@ Objectives of this assignment
 
 Deadline: October 19, 11:59pm
 
-Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
+Download: <!-- [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv) -->
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
@@ -82,7 +82,7 @@ Objectives of this assignment
 
 Deadline: November 9, 9:00am
 
-Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
+Download: <!-- [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv) -->
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
@@ -93,7 +93,7 @@ Continuous data 2: intro to bivariate regression
 
 Deadline: November 29, 11:59pm
 
-Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) 
+Download: <!-- [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) -->
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
@@ -104,9 +104,9 @@ Key:
 Final assignment 
 
 Deadline: December 7, 11:59pm
-
+<!--
 Download: 
-[html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) 
+[html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv)  -->
 
 Key:
 
