--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -35,7 +35,7 @@ Readings:
 Lectures:
 
 - Class 1 (9/26) slides: [html](./slides/EDUC641_1_intro.html) | [pdf](./slides/EDUC641_1_intro.pdf)
-- Class 2 (9/28) slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf)
+- Class 2 (9/28) slides: <!-- [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) -->
 - R Tutorial slides: [html](./slides/tutorial.html)
 
 
@@ -56,16 +56,16 @@ Readings:
 
 Lectures: 
 
-- Class 3 (10/3) slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
+- Class 3 (10/3) slides: <!-- [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf)
 - R code: [R script](./slides/EDUC641_3_code.R)
-- Lab slides: [html](https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1)
+- Lab slides: [html](https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1) -->
 
 Assignment 1: 
 
 - Due: October 9, 11:59pm
-- [html file](./assignments/assignment01.html)
-- [cat.csv dataset](./data/cat.csv)
+- <!-- [html file](./assignments/assignment01.html)
+- [cat.csv dataset](./data/cat.csv) -->
 
 ## Unit 2
 
@@ -87,18 +87,18 @@ Readings:
 
 Lectures:
 
-- Classes 4-5 (10/5 and 10/10) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
+- Classes 4-5 (10/5 and 10/10) slides: <!-- [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
 - Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
 
 
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) 
-- R code: [R script](./slides/EDUC641_4_code.R)
+- R code: [R script](./slides/EDUC641_4_code.R) -->
  
 Assignment 2: 
 
 - Due: October 20, 11:59pm
-- [html file](./assignments/assignment02.html)
-- [cat.csv dataset](./data/cat.csv)
+- <!-- [html file](./assignments/assignment02.html)
+- [cat.csv dataset](./data/cat.csv) -->
 
 ## Unit 3
 
@@ -127,18 +127,18 @@ Readings:
 
 Lecture slides: 
 
-- Classes 7-8 (10/17 & 10/19) slides: [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
+- Classes 7-8 (10/17 & 10/19) slides: <!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
 - Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
 - Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
 
 - Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
-- R code: [R Script](./slides/EDUC641_7_code.R)
+- R code: [R Script](./slides/EDUC641_7_code.R) -->
 
 Assignment 3: 
 
 - Due: November 9, 11:59p
-- [html file](./assignments/assignment03.html)
-- [cont.csv dataset](./data/cont.csv)
+- <!-- [html file](./assignments/assignment03.html)
+- [cont.csv dataset](./data/cont.csv) -->
 
 
 ## Unit 4
@@ -162,20 +162,21 @@ Readings:
 
 Lecture slides: 
 
-- Class 13 (11/7) slides: [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf)
+- Class 13 (11/7) slides: <!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
   + **No class on 11/9 (David traveling for conference)**
-- Class 14 (11/14) slides: [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf)
+- Class 14 (11/14) slides: <!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
   + **No class on 11/23 (university holiday)**
 
+<!--
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R script](./slides/EDUC641_14_code.R)
+- R code: [R script](./slides/EDUC641_14_code.R) -->
 
 Assignment 4: 
 
-- Due Nov. 27, 11:59pm
+- Due Nov. 27, 11:59pm <!--
  - [html file](./assignments/assignment04.html)
- - [cont.csv](./data/cont.csv)
+ - [cont.csv](./data/cont.csv) -->
 
 ## Unit 5
 
@@ -187,13 +188,13 @@ Objectives:
 - Articulate modern critiques of null-hypothesis significance testing framework
 - Describe strategies to improve replicability and generalizability of quantitative research
 
-- Classes 17-18 (11/28 & 11/30): [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
+- Classes 17-18 (11/28 & 11/30): <!-- [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
 
-- Data management cheat sheet: [html](data_management.html)
+- Data management cheat sheet: [html](data_management.html) -->
 
 ## Final Assignment
 
- * Due December 6 at 11:59pm
+* Due December 6 at 11:59pm <!--
 - [html file](./assignments/assignment05.html)
-- [ah01.csv](./data/ah01.csv) | [ah02.csv](./data/ah02.csv) 
+- [ah01.csv](./data/ah01.csv) | [ah02.csv](./data/ah02.csv) -->
 
