--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -29,7 +29,7 @@ Objectives:
 
 Readings: 
 
-- Complete **prior to Sept. 28** class: [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Light, Singer & Willet, 1990, pp. 1-40](./assignments/Light Singer Willet 1990.pdf)
+- Complete **prior to Sept. 28** class: [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Light, Singer & Willet, 1990, pp. 1-40](./assignments/Light Singer Willett 1990.pdf)
 
 
 Lectures:
