Prep site for live launch

--- a/slides/EDUC641_7_continuousdescr.Rmd
+++ b/slides/EDUC641_7_continuousdescr.Rmd
@@ -976,6 +976,8 @@ p +
   line_label(xint = 88, clr = "forestgreen", yint = .07, lbl = "Q3 + 1.5*IQR") +
   theme_minimal()
 
+ggsave("box_density.jpg")
+
 ```
 
 ---
