--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -35,7 +35,7 @@ By the end of this term, it is expected that students will be able to:
 3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
 4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
 5. Describe strategies to improve the replicability and generalizability of quantitative research
-6. Use on open-source, object-oriented statistical programming language (in this case R) to conduct all such analyses
+6. Use an open-source, object-oriented statistical programming language (in this case R) to conduct all such analyses
 
 
 # Textbooks and Reading Materials
@@ -80,7 +80,7 @@ Here are some sites where you can find the answers to many R questions and learn
 
 ### Using Artifical Intelligence (AI) Tools
 
-Artificial Intelligence (AI) chatbots and the Large Language Models (LLMs) on which they rely have dramatically increased the speed and efficiency of many programmers. Members of the teaching team regularly use such tools in their analytic and drafting tasks. That said, they are not (as least currently) substitutes for skilled analysts and writers. Beyond AI chatbots' known proclivity for "hallucinating" facts, their solutions to programming tasks often require adaptation and revision by a knowledgeable human. Further, because their ability to generate text relies on using billions of phrase chunks in the public domain to predict the next word, their language on technical topics can be imprecise when many other writers on these topics are also imprecise. Thus, while we encourage you to investigate how AI chatbots can help improve your programming and statistical analysis skills, we caution you to skeptically review all code and language produced to ensure its alignment to the course expectations. To be explicit: you may use AI chatbots for assistance with your assignments. If you use one to generate your responses, you must indicate so on your assignment. You do not need to do so if you have used these tools only to help with coding tasks and/or light editing of your written responses. You are likely already familiar with OpenAI's [ChatGPT](chat.openai.com). As you gain more experience as a programmer, you may want to use an AI tool that is designed specifically to help with coding such as [GitHub Copilot](github.com/features/copilot) or [AskCodi](https://www.askcodi.com/).
+Artificial Intelligence (AI) chatbots and the Large Language Models (LLMs) on which they rely have dramatically increased the speed and efficiency of many programmers. Members of the teaching team regularly use such tools in their analytic and drafting tasks. That said, they are not (as least currently) substitutes for skilled analysts and writers. Beyond AI chatbots' known proclivity for "hallucinating" facts and reproducing social biases, their solutions to programming tasks often require adaptation and revision by a knowledgeable human. Further, because their ability to generate text relies on using billions of phrase chunks in the public domain to predict the next word, their language on technical topics can be imprecise when many other writers on these topics are also imprecise. Thus, while we encourage you to investigate how AI chatbots can help improve your programming and statistical analysis skills, we caution you to skeptically review all code and language produced to ensure its alignment to the course expectations. To be explicit: you may use AI chatbots for assistance with your assignments. If you use one to generate your responses, you must indicate so on your assignment. You do not need to do so if you have used these tools only to help with coding tasks and/or light editing of your written responses. You are likely already familiar with OpenAI's [ChatGPT](chat.openai.com). As you gain more experience as a programmer, you may want to use an AI tool that is designed specifically to help with coding such as [GitHub Copilot](github.com/features/copilot) or [AskCodi](https://www.askcodi.com/).
 
 # Schedule
 
@@ -133,9 +133,9 @@ If you are concurrently taking any courses with the GEs assigned to this course,
 ## Absence and Attendance Policies
 This is a face-to-face course. Attendance is important because we will develop our knowledge through in-class activities that require your active engagement. We’ll have discussions and group activities that will be richer for your presence, and that you won’t be able to benefit from if you are not there. While there is not an automatic grade deduction for missing classes, we hope to create a value proposition by which attending class will help you learn more and excessive absences will make it challenging to succeed in the course. 
 
-We know our UO community will still be navigating COVID-19, and some students will need to isolate and rest if they get COVID. Please take absences only when necessary, so when they are necessary, your prior attendance will have positioned you for success. Students with COVID are encouraged to seek guidance and resources at [UO’s COVID-19 Safety Resources](https://coronavirus.uoregon.edu/) webpage.  
+We know our UO community will be navigating illness this fall, including COVID-19, and some students will need to isolate and rest if they become sick. Please take absences only when necessary, so when they are necessary, your prior attendance will have positioned you for success. Students with COVID are encouraged to seek guidance and resources at [UO’s COVID-19 Safety Resources](https://coronavirus.uoregon.edu/) webpage.  
 
-I will be mindful of the many impacts the unfolding events related to COVID-19 may be having on you. There may be situations beyond the control of individual students that lead to excessive absences such as becoming ill, caring for others, managing home schooling, etc. 
+There may be situations beyond the control of individual students that lead to multiple absences such as becoming ill, caring for others, managing home schooling, etc. Please communicate with me if such events occur for you.
   
 ## Diversity, Equity, and Inclusion
 It is the policy of the University of Oregon to support and value equity and diversity and to provide inclusive learning environments for all students.  To do so requires that we:
