--- a/slides/EDUC641_1_intro.Rmd
+++ b/slides/EDUC641_1_intro.Rmd
@@ -84,7 +84,7 @@ options(knitr.table.format = "html")
 ]
 
 ---
-# Goals of EDUC quant sequence
+## Goals of EDUC quant sequence
 
 - Develop the basic quantitative skills necessary to conduct applied data analysis
  + The full-year sequence (EDUC 641 $\rightarrow$ EDUC 643 $\rightarrow$ EDUC 645) prepares you to make valuable contributions to a research team
@@ -98,12 +98,12 @@ options(knitr.table.format = "html")
 
 --
 
-.blue[This is an entirely re-designed and modernized core quantitative sequence at the COE. We welcome your feedback!] 
+.blue[This is a re-designed and modernized core quantitative sequence at the COE. We welcome your feedback!] 
 
-.blue[Given the new-ness of these three courses, there are likely to be shortcomings. We are committed to solving them as they arise, but we ask for your grace in allowing us to do so. In the end, we think this will be a better experience for you and your future program-mates.]
+.blue[Given the relative new-ness of these courses, there are likely to be hiccups. We are committed to solving them, but we ask for your grace in allowing us to do so.]
 
 ---
-# Pedagogical orientation of EDUC
+## Pedagogical orientation of EDUC
 
 - Analysis follows research design that emerges from substantive questions
 - Students learn statistical analysis by doing statistical analysis
@@ -130,7 +130,7 @@ Concrete learning objectives:
 3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
 4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
 5. Describe strategies to improve the replicability and generalizability of quantitative research
-6. Use the R programming language to conduct all such analyses
+6. Use an open-source, object-oriented statistical programming language (in this case R) to conduct all such analyses
 
 ---
 # My personal goals
@@ -154,7 +154,7 @@ Concrete learning objectives:
 - English lit undergrad major
 - Former ELA teacher and principal
 - Policy analyst/advisor
-- **Applied** quantitative social scientist focused on improving leadership and policy in schools serving low-family-income and racially minoritized students
+- **Applied** quantitative social scientist focused on improving leadership and policy in schools
 - **Not** a methodologist
 ]
 
@@ -211,8 +211,6 @@ class: middle, inverse
 ---
 # Features of scientific research
 
-<br>
-
 .small[
 
 ### 1. Empirically based
@@ -224,6 +222,10 @@ class: middle, inverse
 ### 7. Peer-reviewed
 
 ]
+
+--
+
+We'll take a largely .red-pink[**post-positivist**] stance in this course sequence, but others have applied the same statistical methods using a .red-pink[**constructivist**] or .red-pink[**critical**] philosophical framework.
 
 
 ---
@@ -265,9 +267,52 @@ class: middle, inverse
  + measurement, internal and external validity
 - Strongly encourage you to consider courses in advanced research design (EDUC 646, EDLD 650, EDLD 679) after completing the quantitative EDUC sequence
 
+---
+# Start with a question
+
+Research questions:
+- identify the target population from which you will draw a sample
+- determine the appropriate level of aggregation
+- identify the outcome variables
+- determine the key predictors
+- raise challenges for measurement and data collection
+- influence the number of people you must study
+- determine how much researcher control vs. observation are necessary
+
+> "Well-crafted questions guide the systematic planning of research. Formulating your questions precisely enables you to design a study with a good chance of answering them." <br> -- Light, Singer & Willet, 1990
+
 --
 
-.blue[*You will explore (or have explored) these concepts in much more detail through EDUC 612. This is sort of like research design in 15 minutes.*]
+.blue[***All of this implies that if you can't access the right kind of data to answer your question, you need to either try harder or get a different question!***]
+
+---
+# Questions lead to design
+The questions you seek to answer will influence the research design you will use:
+
+**Descriptive questions**
+- .small[What are the instructional skills that Oregon public school teachers of English Language Learners possess?]
+
+**Relational questions**
+- .small[Do Oregon public school teachers of English Learners in self-contained classrooms have different pedagogical skill levels than teachers of non-English Learners?]
+
+**Causal questions**
+- .small[Does the Success for All whole-school intervention improve students' reading achievement?]
+
+--
+
+.pull-left[
+.red[**Don't attempt to answer a question that is inherently (or implicitly) causal using a correlational approach!**]
+]
+
+.pull-right[
+```{r, echo=F, out.width="20%"}
+include_graphics("lanes.jpg")
+```
+]
+
+--
+
+.blue[*You will explore (or have explored) these concepts in much more detail in EDUC 612. This is sort of like research design in 15 minutes.*]
 
 ---
 class: middle, inverse
