--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -37,6 +37,8 @@ Lectures:
 - Class 1 (9/26) slides: [html](./slides/EDUC641_1_intro.html) | [pdf](./slides/EDUC641_1_intro.pdf)
 - Class 2 (9/28) slides: <!-- [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) -->
 - R Tutorial slides: [html](./slides/tutorial.html)
+- Lab overview and expectations: [pdf](./labs/EDUC 641 Lab Overview.pdf)
+- Lab 1: [doc](./labs/Lab 1.docx)
 
 
 ## Unit 1 
