--- a/slides/EDUC641_4_categrel.Rmd
+++ b/slides/EDUC641_4_categrel.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Examining the relationship between categorical variables"
+title: "Relationships between categorical variables"
 subtitle: "EDUC 641: Unit 2"
 author: "David D. Liebowitz"
 #date: "`r format(Sys.time(), '%d %B %Y')`"
@@ -16,7 +16,7 @@ output:
 
 ```{R, setup, include = F}
 library(pacman)
-p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra, xaringanthemer)
+p_load(here, tidyverse, xaringan, knitr, kableExtra, xaringanthemer)
 
 i_am("slides/EDUC641_4_categrel.rmd")
 
@@ -80,7 +80,7 @@ options(knitr.table.format = "html")
 - Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
 
 ---
-# Reminder of motivating question
+## Reminder of motivating question
 
 
 .blue[**Were convicted murderers more likely to be sentenced to death in Georgia if they killed someone Black or if they killed someone white?**]
@@ -113,7 +113,6 @@ class: middle, inverse
 
 ---
 # Two-way tables
-
 .small[Now we seek to create a *joint display* of the values of *RVICTIM* and *DEATHPEN*]
 ```{r, echo=T}
 table(df$deathpen, df$rvictim)
@@ -135,6 +134,9 @@ $$\frac{23}{1483 + 23}*100= 1.53\%$$
 #### Can ask R for this too:
 ```{r, echo=T}
 round(prop.table(table(df$deathpen, df$rvictim), margin=2)*100, 2)
+
+# the margin option 2 asks for the proportion of the columns
+# if you want the proportion by rows, specify margin=1
 ```
 
 --
@@ -214,7 +216,7 @@ addmargins(two_way)
 
 <br>
 
-*Note*: The proportions above are rounded, so if you use them to calculate the **EXPECTED** values, they will differ slightly from those on the next slide. If you calculate the proportions by hand (i.e., $1506/2474 = 0.60\overline{84}$), you will get the exact values, and then they will align with the rounded **EXPECTED** values on the next slide.
+.small[*Note*: The proportions above are rounded, so if you use them to calculate the **EXPECTED** values, they will differ slightly from those on the next slide. If you calculate the proportions by hand] (i.e., $1506/2474 = 0.60\overline{84}$), .small[you will get the exact values, and then they will align with the rounded **EXPECTED** values on the next slide.]
 
 ---
 # Observed vs. Expected
@@ -317,7 +319,6 @@ class: middle, inverse
 
 ---
 # Big or small?
-
 We can summarize the **NET DISCREPANCY** between the tables of **OBSERVED** and **EXPECTED** frequencies, using a statistic called the Pearson Chi-Squared ( $\chi^2$) statistic
 
 .pull-left[
@@ -345,8 +346,7 @@ Decision rule: If $\chi^2$ is big, then declare that there is a relationship bet
 but what is **BIG**, what is **close to zero**, and is 103.8 **big** or **close to zero**?
 
 --
-
-For that we will use the this statistic to conduct a $\color{red}{\chi^2}$ .red[**goodness-of-fit**] test.
+For that we will use this statistic to conduct a $\chi^2$ .red-pink[**goodness-of-fit**] test.
 
 ---
 # Statistical inference
@@ -357,7 +357,7 @@ Let's take a step back to capture the nature of the problem
   + In fact, even if we could observe outcomes for all murderers in the state of Georgia, our observation of them is imperfect due to *measurement error* and so we only ever observe samples, never populations (more on this later)
 - Is there something about sampling from a population that could resolve our problem?
 - Is there some way to generalize our conclusions about our *sample* relationship between *DEATHPEN* and *RVICTIM* to the *underlying population*?
-  + This is called *statistical inference* and it is *the* critical contribution of quantitative methods to research
+  + This is called .red-pink[**statistical inference**] and it is ***the*** critical contribution of quantitative methods to research
 
 ---
 # Sampling idiosyncrasy
@@ -374,7 +374,7 @@ Let's take a step back to capture the nature of the problem
 ---
 # The Null Hypothesis $(H_{0})$
 
-We start by imagining a hypothetical world in which there is **no relationship** between *DEATHPEN* and *RVICTIM* in a true population of convicted murderers. Then, we imagine drawing a series of samples of convicted murders over and over again (say...10,000 times) from this hypothetical population. What values of the $\chi^2$ statistic might we observe?
+.small[We start by imagining a hypothetical world in which there is **no relationship** between *DEATHPEN* and *RVICTIM* in a true population of convicted murderers. Then, we imagine drawing a series of samples of convicted murders over and over again (say...10,000 times) from this hypothetical population. What values of the] $\chi^2$ .small[statistic might we observe?]
 
 ```{r, out.width = "70%", echo=F}
   include_graphics("null_pop.jpg")
@@ -392,7 +392,7 @@ ch <- ggplot(chsq, aes(Chi_Square)) + geom_histogram() +
 ch
 ```
 
-The histogram summarizes the natural variation that could occur in a $\chi^2$ statistic as a result of *random sampling idiosyncrasy*, after drawing repeated samples from a hypothetical population in which there is no relationship between *DEATHPEN* and *RVICTIM*.
+The histogram summarizes the natural variation that could occur in a $\chi^2$ statistic due to ***random sampling idiosyncrasy***, after drawing repeated samples from a hypothetical population in which there is no relationship between *DEATHPEN* and *RVICTIM*.
 
 ---
 # Testing the null
@@ -417,11 +417,11 @@ ggplot(chsq, aes(Chi_Square)) +
 
 --
 
-.blue[*This is a histogram of possible chi-square values that could result from sampling idiosyncrasy, and then the actual value of the chi-squared statistic in our sample. What do you think?*]
+.small[.blue[*This is a histogram of possible chi-square values that could result from sampling idiosyncrasy, and the actual value of the chi-squared statistic in our sample. What do you think?*]]
 
 --
 
-*WOOHOO!* In this thought exercise, you've just engaged in a rudimentary version of .red[*Null-Hypothesis Significance Testing (NHST)*]; the bedrock of most social science research.
+*WOOHOO!* In this thought exercise, you've just engaged in a rudimentary version of .red-pink[**Null-Hypothesis Significance Testing (NHST)**]; the bedrock of most social science research.
 
 ---
 # Testing the null (*p*-values)
@@ -437,7 +437,7 @@ ggplot(chsq, aes(Chi_Square)) +
 
 --
 
-The statistic that captures the probability of observing a $\chi^2$ statistic of a given magnitude in a particular sample, in the presence of a null population, is called the .red[*p*-value]
+The statistic that captures the probability of observing a $\chi^2$ statistic of a magnitude in a particular sample, in the presence of a null population, is called the .red-pink[***p*-value**].
 
 
 ---
@@ -454,7 +454,7 @@ ggplot(chsq, aes(x=Chi_Square)) + geom_density(fill="pink", alpha=0.2) +
 # Testing the null (*p*-values)
 
 .blue[*At what p-value would you start to believe that the value of the*] $\color{blue}{\chi^2}$ .blue[*statistic in your own research was "big" (i.e., was unlikely to have occurred by accident)*]
-```{r, echo=F, fig.height=5}
+```{r, echo=F, fig.height=4.75}
 chsq_right <- density(chsq$Chi_Square, from = 3.84, to = max(chsq$Chi_Square))
 chsq_data <- data.frame(x = chsq_right$x, y = chsq_right$y)
 ggplot(chsq, aes(x=Chi_Square)) + geom_density(fill="pink", alpha=0.2) +
@@ -495,7 +495,7 @@ class: middle, inverse
 ---
 # Sub-sample comparisons
 
-There are more complex ways of doing this, but one approach is to replicate the original contingency table analysis in interesting "slices" of the sample, defined by a third variable
+.small[There are more complex ways of doing this, but one approach is to replicate the original contingency table analysis in interesting "slices" of the sample, defined by a third variable.]
 
 --
 
@@ -527,7 +527,7 @@ of the murderers are sentenced to death.
 
 --
 
-The percentage of Black murderers sentenced to death for killing a White victim is about 32.5 times the percentage of Black murderers sentenced to death for killing a Black victim, in Georgia
+The percentage of Black murderers sentenced to death for killing a white victim is about 32.5 times the percentage of Black murderers sentenced to death for killing a Black victim, in Georgia.
 
 ---
 # A statistical test
@@ -561,7 +561,7 @@ chi_b$p.value
 - $\chi^2$ statistic: 414.7
 - *p*-value: <0.0001
 - Decision: Reject $H_{0}$
-- Conclusion: There is a statistically significant relation between the assignment of the death penalty and the race of the victim, on average, in the population of Black murderers in GA.
+- Conclusion: There is a statistically significant relationship between the assignment of the death penalty and the race of the victim, on average, in the population of Black murderers in GA.
 ]
 
 ---
@@ -588,7 +588,7 @@ of the murderers are sentenced to death.
 
 --
 
-The percentage of White murderers sentenced to death for killing a White victim is about 2.5 times the percentage of White murderers sentenced to death for killing a Black victim, in Georgia
+The percentage of White murderers sentenced to death for killing a White victim is about 2.5 times the percentage of White murderers sentenced to death for killing a Black victim, in Georgia.
 
 ---
 # A statistical test
@@ -622,7 +622,7 @@ chi_w$p.value
 - $\chi^2$ statistic: 3.35
 - *p*-value: 0.067
 - Decision: Fail to reject $H_{0}$
-- Conclusion: There is not a statistically significant relation between the assignment of the death penalty and the race of the victim, on average, in the population of White murderers in GA.
+- Conclusion: There is not a statistically significant relationship between the assignment of the death penalty and the race of the victim, on average, in the population of white murderers in GA.
 
 
 
@@ -633,7 +633,7 @@ chi_w$p.value
 # Putting it all together
 
 ### Basic steps of classical statistical inference
-1. State a research question, including a null hypothesis $(H_{0})$ which states there exists no relationship between our variables of interest
+1. State a research question, including a null hypothesis $(H_{0})$ which states there exists no relationship between our variables of interest, ***on average in the population***
 2. Display and describe the observed data
 3. Summarize the observed data in relationship to an expected value
 4. Set a threshold at which we will no longer believe that the discrepancy between the observed and expected relationship is due to sampling idiosyncrasy
@@ -644,9 +644,9 @@ chi_w$p.value
 ---
 # Our intepretation
 
-> In the population of convicted murderers in Georgia, the imposition of the death penalty and the race of the victim are related ( $\chi^2$ = 103.8, *p*< 0.001) The percentage of convicted murderers who were sentenced to death after killing a White victim was more than 8 times the percentage of convicted to murderers who were sentenced to death after killing a Black victim. In Figure 1, we show... 
+> In the population of convicted murderers in Georgia, the imposition of the death penalty and the race of the victim are, on average, related ( $\chi^2$ = 103.8, *p*< 0.001). The percentage of convicted murderers who were sentenced to death after killing a White victim was more than 8 times the percentage of convicted murderers who were sentenced to death after killing a Black victim. In Figure 1, we show... 
 
-> This phenomenon is largely driven by the imposition of the death penalty on Black defendants. Courts sentenced Black defendants to death for killing White victims at more than 32 times the frequency than when they were convicted of killing Black defendants ( $\chi^2$ = 414.7, *p*<0.001); whereas, we detect no statistical difference between White defendants convicted of murdering White compared to Black victims ( $\chi^2$ = 3.3, *p*=0.067). In Table 1, we show...
+> This phenomenon is largely driven by the imposition of the death penalty on Black defendants. Courts sentenced Black defendants to death for killing white victims at more than 32 times the frequency than when they were convicted of killing Black defendants ( $\chi^2$ = 414.7, *p*<0.001); whereas, we detect no statistical difference on average between white defendants convicted of murdering white -- compared to Black -- victims ( $\chi^2$ = 3.3, *p*=0.067). In Table 1, we show...
 
 ---
 
@@ -680,16 +680,16 @@ class: middle, inverse
 - LSWR Chapter 11: hypothesis testing
 - LSWR Chapter 12: categorical data analysis (chi-square test focus)
     + Please do not worry about fully understanding the discussions on sampling distributions, degrees of freedom, one- vs. two-sided tests, or variations of chi-squared calculations **(Sections 11.3, 11.4.3, 11.7, 11.8, 12.1.4-12.1.8, 12.3-12.9)**. We will (partially) cover these topics in future classes.
-- Levy (2019)
-    + Last name A-H: Clayton; Last Name I-P: Evans; Last Name R-Z: Levy
-    + Prep to summarize main ideas and supporting details
+- Clayton (2020)
+    + Last name A-L: Evans; Last Name M-Z: Clayton
+    + Prep to summarize main ideas and key details
 
 ### Optional follow-up
 - Complete R Bootcamp Module 6 (matrices)
 - Complete R Bootcamp Module 7 (lists)
 
 ### Assignments
-- Quiz on Units 1 & 2 next class (10/13)
-- Assignment #2 Due October 19, 11:59pm
+- Quiz on Units 1 & 2 on Oct. 17
+- Assignment #2 Due October 20, 11:59pm
 
 
