post assignment 1 key

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -103,8 +103,8 @@ Lectures:
 Assignment 2: 
 
 - Due: October 20, 11:59pm
-- <!-- [html file](./assignments/assignment02.html)
-- [cat.csv dataset](./data/cat.csv) -->
+- [html file](./assignments/assignment02.html)
+- [cat.csv dataset](./data/cat.csv)
 
 ## Unit 3
 
