--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -43,7 +43,7 @@ Deadline: October 9, 11:59pm
 Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
 
 Key: 
-<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
+[doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
 
 ## 3.2. Assignment 2 
 
@@ -63,7 +63,7 @@ Objectives of this assignment
 
 Deadline: October 19, 11:59pm
 
-Download: <!-- [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv) -->
+Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
 Key: 
 <!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
