--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -94,11 +94,10 @@ Readings:
 Lectures:
 
 - Classes 4-5 (10/5 and 10/10) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
-<!-- - Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)  -->
-
-
+- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf) 
 - R code: [R script](./slides/EDUC641_4_code.R)
+- Lab activities: [doc](./labs/Lab3.docx)
  
 Assignment 2: 
 
